tests/typechecking/invalid/fun3.ml
let rec func a b = a / b 